src/index.css
/* ... */
.doc-img-and-name{
  display: flex;
  gap: 1em;
}
.doc-img-and-name p {
  align-self: center;
}
.doc-item p {
  font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
  font-size: 1.1rem;
}
.doc-item a{
  display: flex;
  justify-content: center;
  text-decoration: none;
  color: #000;
  background-color: rgba(240, 248, 255, 0.349);
  border: 1px dotted red;
  padding: 0.5em;
  border-radius: 5px;
  box-shadow: 2px 2px 2px rgba(49, 58, 1, 0.822), -2px -2px 2px rgba(33, 1, 92, 0.397);
  transition: all 0.2s ease-in-out;
}
.doc-item a:hover{
  box-shadow: 0px 2px 2px brown;
}
.doc-action-button{
  display: flex;
  gap: 2em;
  justify-content: center;
}
.Rectification{
  background-color: aliceblue;
  border-radius: 5px;
  padding: 0.7em;
  box-shadow: 0px 0px 1px silver;
}
.faq-holder{
  background-color: rgba(244, 250, 255, 0.432);
  padding: 1em;
  border-radius: 5px;
  box-shadow: 0px 0px 6px brown;
  position: relative;
}

.faq-holder::before {
  position: absolute;
  content: "٭";
  top: 0;
  left: 0;
  margin-left: 0.1em;
  margin-top: -0.5em;
  font-size: 1.5rem;
  color: rgb(104, 21, 21);
  text-shadow: 2px 2px 3px rgb(255, 255, 0);
  border-top-left-radius: 5px;
}
.faq-holder::after {
  position: absolute;
  content: "࠰";
  bottom: 0;
  right: 0;
  margin-bottom: -0.4em;
  margin-right: 0.1em;
  font-size: 1.7rem;
  color: rgb(207, 152, 1);
  text-shadow: 2px 2px 2px rgb(1, 1, 87), -2px 2px 2px rgb(1, 1, 87);
  border-top-left-radius: 5px;
}

#welcome-pod {
  font-size: clamp(1.4rem, 2.2vw, 2rem);
}

.podcast-wrapper {
  margin-top: 7em;
  display: flex;
  justify-content: center;
}
.podcast-message{
  align-self: center;
}
.podcast-message p {
  font-family: Georgia, 'Times New Roman', Times, serif;
  font-style: italic;
  font-size: clamp(1.3rem, 2vw, 1.5rem);
}
.podcast-picture-wrapper img {
  width: 300px;
  height: 300px;
  object-fit: cover;
  border-radius: 5px;
  filter: drop-shadow(0px 0px 4px gray);
  -webkit-filter: drop-shadow(0px 0px 4px gray);
  transition: all 0.2s ease-in-out;
}

#important-item-wrapper, #important-item-wrapper-2 {
  position: relative;
}

#important-item::before{
  position: absolute;
  content: "";
  bottom: 0;
  left: 0;
  width: 100%;
  height: 8px;
  background-image: linear-gradient(95deg, rgba(0, 217, 255, 0.274), rgba(134, 4, 80, 0.274));
  z-index: -1;
}

#important-item-2{
  text-decoration: underline dashed rgb(168, 2, 79);
  text-underline-offset: 7px;
  text-decoration-thickness: 2px;
}

.podcast-semester-wrapper {
  display: flex;
  justify-content: center;
}
#podcast-semester {
  text-align: center;
  padding: 5px;
  background-color: #fafaf64d;
  border-top: 3px double rgb(197, 76, 7);
  border-bottom: 4px dashed #00218d;
  border-radius: 10px;
  box-shadow: inset 2px 2px 2px silver;
}

   .cours-podcasts-holder {
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
  gap: 2em;
}

.podcast-semesters-options {
  margin-top: 2em;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  gap: 2em;
}

.podcast-semesters-options label {
  cursor: pointer;
  background-color: #ffffffa4;
  box-shadow: 2px 2px 3px rgb(41, 1, 114);
  border: 1px solid #ccc;
  padding: 0.5em;
}

.cours-podcast {
  background-image: linear-gradient(to left, rgba(128, 0, 128, 0.123), #cccccc52, rgba(147, 232, 243, 0.822)), url("/stars.png");
  padding: 0.5em;
  border-radius: 5px;
  box-shadow: 0px 0px 9px rgba(119, 136, 153, 0.726);
  flex-basis: 25vw;
}
.cours-podcast-header p {
  background-color: #ffffffb4;
  font-size: 1.2rem;
  font-weight: bold;
  font-style: italic;
  padding: 0.3em 0.5em;
  border-radius: 0.2em;
  backdrop-filter: blur(2px);
}

.cours-podcast-body p {
  background-color: #ffffffb4;
  backdrop-filter: blur(2px);
  font-size: 1rem;
  padding: 0.3em 0.5em;
  border-radius: 0.2em;
}
.podcast-underliner {
  text-decoration: underline wavy rgb(100, 1, 42);
  text-underline-offset: 5px;
  text-decoration-thickness: 2px;
}

.guide-msg {
  margin-top: 8em;
}

.contribute-msg-holder {
  margin-top: 7em;
}

#install-banner {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100vh;
  background-color: rgba(17, 16, 16, 0.555);
  backdrop-filter: blur(2px);
  padding: 2em;
  z-index: 9999;
}
.banner-wrapper {
  height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
}
#banner-title {
  font-weight: bold;
  color: #021553;
  background-color: #0215531a;
  padding: 0.2em;
  border-radius: 5px;
}
.banner-content {
  display: flex;
  flex-direction: column;
  gap: 0.1em;
  width: 50%;
  align-items: center;
  justify-content: center;
  background-color: aliceblue;
  border-radius: 0.5em;
  padding: 1em;
}
#banner-divider {
  text-align: center;
  color: red;
  font-weight: bold;
}

#install-btn{
  outline: none;
  border: none;
  padding: 0.3em;
  font-size: 1rem;
  border-radius: 5px;
  background-color: #021553;
  color: #fff;
  transition: all 0.2s ease-in-out;
  &:hover {
    color: #021553;
    background-color: #ffff;
    box-shadow: 0px 0px 3px #000;
  }
}
.reveal-answer{
  background-color: rgba(127, 255, 212, 0.521);
  padding: 0.7em;
  border-radius: 5px;
}
.no-reveal-answer{
  background-color: rgba(127, 255, 212, 0.521);
  padding: 0.7em;
  border-radius: 5px;
}
.podcast-not-allowed {
  display: flex;
  justify-content: center;
}
.podcast-not-allowed p {
  font-size: 1.2rem;
  font-weight: bold;
  box-shadow: 0px 0px 4px #000;
}
.podcast-not-allowed p span:first-child {
  color: #cf032f;
}
.podcast-not-allowed p span:last-child {
  color: #00218d;
}
.answer-content{
  line-height: 1.7em;
}
.underline{
  text-decoration: underline red;
  text-underline-offset: 6px;
}
.put-question{
  display: inline-flex;
  flex-direction: column;
  background-color: rgb(241, 241, 241);
  border-radius: 10px;
  padding: 1em;
  box-shadow: 0px 0px 4px rgb(159, 3, 190);
}
/* ... */

